--- a/render.yaml
+++ b/render.yaml
@@ -1,2 +1,6 @@
-buildCommand: pip install -r requirements.txt
-startCommand: gunicorn app:app
+services:
+  - type: web
+    name: chatbot-cmd-sin-meta
+    env: python
+    buildCommand: ""
+    startCommand: "gunicorn app:app"
