--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,2 @@
-services:
-  - type: web
-    name: chatbot-cmd-sin-meta
-    env: python
-    buildCommand: ""
-    startCommand: "gunicorn app:app"
+buildCommand: pip install -r requirements.txt
+startCommand: gunicorn app:app
